k8s/lb-service-jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
