k8s/ingress.yaml
#file to expose service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-hello-world-service
            port:
              number: 80
